# ai_slides

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.py  uv.toml
.kiro/specs/pptx-export-enhancement/: design.md  requirements.md  tasks.md
.kiro/specs/project-simplification/: design.md  requirements.md  selected_templates.md  system_state_before_simplification.md  task_2_summary.md  tasks.md  template_selection_recommendation.md  template_system_test_results.md
services/: __init__.py  config_service.py  enhanced_ppt_service.py  file_processor.py  pyppeteer_pdf_converter.py  research_report_generator.py  service_instances.py
services/image/config/: image_config.py
services/research/: __init__.py  content_extractor.py  enhanced_report_generator.py
src/ai_slides/: __init__.py  main.py
src/ai_slides/ai/: __init__.py  providers.py
src/ai_slides/api/: __init__.py  ai_slides_api.py  config_api.py  image_api.py  models.py  openai_compat.py
src/ai_slides/core/: __init__.py  config.py
src/ai_slides/database/: __init__.py  create_default_template.py  database.py  health_check.py  migrations.py  models.py  repositories.py
src/ai_slides/database/migrations/: add_project_share_fields.py  add_speech_scripts_table.py  remove_auth_tables.py  remove_speech_scripts_table.py
src/ai_slides/services/: ai_service.py  config_service.py  enhanced_ppt_service.py  file_processor.py  pdf_to_pptx_converter.py  pyppeteer_pdf_converter.py  service_instances.py
src/ai_slides/utils/: thread_pool.py
src/ai_slides/web/: __init__.py  routes.py
src/ai_slides/web/templates/: ai_config.html  base.html  error.html  global_master_templates.html  image_gallery.html  image_generation_test.html  index.html  project_dashboard.html  project_detail.html  project_slides_editor.html  projects_list.html  result.html  scenarios.html  todo_board.html  todo_board_with_editor.html  upload_result.html
